fixed spacing issue

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -309,7 +309,7 @@ hr.small {
 /*Space*/
 
 .spaceDivide {
-  height: 30%;
+  height: 300px;
   background: #fffcdc;
   background: -webkit-linear-gradient(to left, #d9a7c7, #fffcdc); /
   background: -o-linear-gradient(to left, #d9a7c7, #fffcdc);
@@ -386,7 +386,9 @@ hr {
 .contact {
     color: #333;
     /*height: 80%;*/
-    padding: 50px 0;
+    /*padding: 50px 0;*/
+    margin-top: -20px;
+    padding-bottom: 20px;
     background: #fffcdc;
     background: -webkit-linear-gradient(to left, #d9a7c7, #fffcdc); /
     background: -o-linear-gradient(to left, #d9a7c7, #fffcdc);
